# pulseUDP

./: .bumpversion.cfg  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
docs/: gui-design.md
packaging/: entrypoint.py  pulseudp.spec
packaging/licenses/: THIRD_PARTY_NOTICES.md
spec/: RFC-pulseUDP.md  Schema.json
spec/examples/: telemetry_example.json  telemetry_long_example.json  validate.py
src/pulseudp/: __init__.py  __main__.py  app.py  client.py  discovery.py  model.py  protocol.py
tests/: test_client.py  test_discovery.py  test_model.py  test_packaging.py  test_protocol.py  test_schema.py
tools/: sim.py
