[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pulseudp"
version = "0.1.0"
description = "On-the-fly telemetry collection and visualization for Ethernet-capable microcontrollers"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
dependencies = [
    "jsonschema>=4",
]

[project.optional-dependencies]
# pyqtgraph over PyQt5 for high-rate (~20 kHz) telemetry plotting. PyQt5 is chosen
# for its support across the whole requires-python >=3.8 range; note it is GPLv3,
# so the GUI application is GPLv3. See docs/gui-design.md.
gui = [
    "PyQt5>=5.15",
    "pyqtgraph>=0.13",
    "numpy>=1.21",
]
dev = [
    "pytest",
    "numpy>=1.21",
]

[project.scripts]
pulseudp = "pulseudp.app:run"

[tool.setuptools.packages.find]
where = ["src"]
